--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
@@ -10,8 +10,8 @@
         </ui:VisualElement>
         <ui:VisualElement name="tabs-selector" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; visibility: visible; display: flex; flex-shrink: 0; margin-bottom: 4px; margin-top: 4px;">
             <ui:VisualElement class="tabs-menu" style="min-height: 32px; align-self: center; justify-content: flex-start; align-items: center; flex-grow: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 4px; padding-right: 4px; padding-top: 4px; padding-bottom: 4px; border-top-left-radius: 6px; border-bottom-left-radius: 6px; border-top-right-radius: 6px; border-bottom-right-radius: 6px;">
-                <ui:Button text="Ribbons" display-tooltip-when-elided="true" name="ribbons-button" class="tabs-menu__item" />
-                <ui:Button text="Kerbals" display-tooltip-when-elided="true" name="kerbals-button" class="tabs-menu__item tabs-menu__item--last tabs-menu__item--selected" />
+                <ui:Button text="Kerbals" display-tooltip-when-elided="true" name="kerbals-button" class="tabs-menu__item tabs-menu__item--selected" />
+                <ui:Button text="Ribbons" display-tooltip-when-elided="true" name="ribbons-button" class="tabs-menu__item tabs-menu__item--last" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="ribbons-tab" class="ribbons-space" style="visibility: visible; display: none;" />
