--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WayfarerWingsStyle.uss
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WayfarerWingsStyle.uss
@@ -13,6 +13,8 @@
     --gray-4: rgb(33, 38, 46);
     --gray-5: rgb(29, 32, 41);
     --gray-6: rgb(25, 31, 37);
+    --gray-7: rgb(25, 28, 34);
+    --input-bg: var(--gray-7);
     --button-bg: var(--gray-6);
     --blue-1: rgb(134, 144, 255);
     --blue-3: rgb(105, 109, 255);
@@ -22,6 +24,7 @@
     --hover-bg: var(--darkblue-3);
     --darkblue-4: rgb(13, 13, 22);
     --led-green: rgb(0, 255, 102);
+    --text-color: #c0c7d5;
 }
 
 #root {
@@ -338,6 +341,8 @@
     border-radius: 6px;
     border-width: 1px;
     border-color: var(--lightgray-3);
+    color: var(--text-color);
+    padding: 7px;
 }
 
 .unity-popup-field.dropdown-field.dropdown-field--inline .unity-popup-field__label {
@@ -350,6 +355,10 @@
 }
 
 .unity-popup-field.dropdown-field:hover .unity-base-popup-field__input {
+    background-color: var(--hover-bg);
+}
+
+.unity-popup-field.dropdown-field:active .unity-base-popup-field__input {
     background-color: var(--hover-bg);
 }
 
@@ -477,9 +486,6 @@
 }
 
 .kerbal-name-title {
-}
-
-.kerbal-name-title {
     font-size: 24px;
     color: rgb(255, 255, 255);
 }
@@ -531,7 +537,9 @@
     background-position: center center;
     border-width: 1px;
     border-color: var(--lightgray-3);
+    -unity-background-image-tint-color: var(--text-color);
     rotate: 0deg;
+    background-color: var(--input-bg);
     background-image: url('project://database/Assets/Images/ArrowIcon.png?fileID=21300000&guid=4a506aed588797846a24861c8c87047c&type=3#ArrowIcon');
 }
 
