Highlight kerbals in current vessel
#4

--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WayfarerWingsStyle.uss
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WayfarerWingsStyle.uss
@@ -432,6 +432,12 @@
     color: var(--red);
 }
 
+.kerbal-status.kerbal-status--assigned-active {
+    -unity-background-image-tint-color: var(--blue-3);
+    color: var(--blue-3);
+}
+
+
 .secondary-label {
     font-size: 12px;
     padding-top: 0;
