--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/KerbalWindow.uxml
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/KerbalWindow.uxml
@@ -32,8 +32,24 @@
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
+        <WayfarersWings.Unity.WayfarersWings.Unity.Assets.Runtime.Controls.TabSelector items="Wings,Statistics" focusable="false" name="tab-selector" style="align-self: flex-start; margin-bottom: 6px;" />
+        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="statistics-view">
+            <WayfarersWings.Unity.WayfarersWings.Unity.Assets.Runtime.Controls.TableSeparatorTitle text="#WayfarersWings/UI/CelestialBodies" name="TableSeparatorTitle" class="table-title--first" />
+            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: space-between;">
+                <WayfarersWings.Unity.WayfarersWings.Unity.Assets.Runtime.Controls.TableRow label="Visited celestial bodies" value="15" name="visited-bodies-row" text="#WayfarersWings/UI/VisitedBodiesCount" style="flex-grow: 0; flex-basis: 47%;" />
+            </ui:VisualElement>
+            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: space-between;">
+                <WayfarersWings.Unity.WayfarersWings.Unity.Assets.Runtime.Controls.TableRow label="Visited biomes" value="15" name="visited-biomes-row" text="#WayfarersWings/UI/VisitedBiomesCount" style="flex-grow: 0; flex-basis: 47%;" />
+                <WayfarersWings.Unity.WayfarersWings.Unity.Assets.Runtime.Controls.TableRow label="Discoverables found" value="5" name="discoverables-found-row" text="#WayfarersWings/UI/VisitedDiscoverablesCount" style="flex-grow: 0; flex-basis: 47%;" />
+            </ui:VisualElement>
+            <WayfarersWings.Unity.WayfarersWings.Unity.Assets.Runtime.Controls.TableSeparatorTitle text="#WayfarersWings/UI/ActiveMission" />
+            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: space-between;">
+                <WayfarersWings.Unity.WayfarersWings.Unity.Assets.Runtime.Controls.TableRow label="Discoverables found" value="5" name="mission-bodies-row" text="#WayfarersWings/UI/VisitedBodiesCount" style="flex-grow: 0; flex-basis: 47%;" />
+                <WayfarersWings.Unity.WayfarersWings.Unity.Assets.Runtime.Controls.TableRow label="Visited biomes" value="15" name="mission-regions-row" text="#WayfarersWings/UI/VisitedRegionsCount" style="flex-grow: 0; flex-basis: 47%;" />
+            </ui:VisualElement>
+        </ui:ScrollView>
         <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="ribbons-view" style="display: flex; flex-shrink: 1; height: 100%;" />
-        <ui:Foldout text="#WayfarersWings/UI/Search" value="true" name="award-foldout" class="foldout--pixel" style="flex-shrink: 0; margin-top: 6px;">
+        <ui:Foldout text="#WayfarersWings/UI/Search" value="false" name="award-foldout" class="foldout--pixel" style="flex-shrink: 0; margin-top: 6px;">
             <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row;">
                 <ui:TextField picking-mode="Ignore" label="#WayfarersWings/UI/Search" name="search-awardables-field" class="text-field" style="font-size: 12px; padding-top: 0; flex-grow: 1;" />
                 <ui:Button text="#WayfarersWings/UI/AwardToKerbal" display-tooltip-when-elided="true" name="award-confirm-button" focusable="true" class="button--default" style="visibility: visible; display: flex; margin-left: 6px;" />
